# apa_common

./: .clang-format  .gitignore  CMakeLists.txt  MathLib.c  README.md  Ring_Buffer.c  build.sh
apa_common/common/: CMakeLists.txt  MathFunc.c  PK_Calibration_Config.c  PK_Calibration_Debug.c  PK_Calibration_Json.c  PK_Utility.c  Record_Buff.c  Record_Log.c
apa_common/main/: CMakeLists.txt  Debug_Cmd.c  MainTest.c  main.h
apa_control/distancectrl/: CMakeLists.txt  DistCtrl.h  DistCtrl_Angle.c  DistCtrl_Angle_han.c  DistCtrl_Angle_yuan.c  PK_DistCtrl.c  PK_DistCtrl_han.c  PK_DistCtrl_yuan.c  Speed.c
apa_control/speedctrl/: PK_SpeedCtrl.c
apa_device/can/: ApaCtrlCarBody.c  ApaCtrlCarBody.h  ApaCtrlVarDef.h  ApaRecvInfoPro.c  ApaRecvInfoPro.h  ApaSendInfoPro.c  ApaSendInfoPro.h  CMakeLists.txt  CanMain.c
apa_device/dds/: CMakeLists.txt  DDS_Api.c  DdsWorker.cpp  NavPosFramePub.cpp  NavPosFramePub.h  VisSoltFrameSub.cpp  VisSoltFrameSub.h
apa_device/eth/: CMakeLists.txt  Ethenet_Mcu.c  Ethenet_RTHeartBeat.c  Ethenet_ResLog.c  McuMsgData.h
apa_device/uart/: CMakeLists.txt  UartFCS.c  UartFCS.h  UartHdlc.c  UartHdlc.h  UartMain.c
apa_include/script/: build.sh  clone.sh  common.cmake  compile_commands.json  lldb_server.sh  run.sh
apa_location/: EKF_LC.c  EKF_LC.h  EKF_LC_PROCESS.c  EKF_LC_PROCESS.h  LC_calib.c  LC_diag.c  LC_fcn.c  LinearDemingRegression.c  LinearDemingRegression.h  Nav_math.c  Nav_math.h  PK_Location.c  PK_LocationImpl.h  PK_Location_Debug.c  PK_Location_Debug.h  SUKF.c  SUKF.h  abs.c  abs.h  car_moving_state.c  car_moving_state.h  codegenall_initialize.c  codegenall_initialize.h  codegenall_rtwutil.c  codegenall_rtwutil.h  codegenall_types.h  combineVectorElements.c  combineVectorElements.h  diag.c  diag.h  dllh2enu.c  dllh2enu.h  ekfEuler_atti.c  ekfEuler_atti.h  kalman_filter_group.c  kalman_filter_group.h  kf3d.c  kf3d.h  mass_estimate.c  mass_estimate.h  (+45 more)
apa_location/bicycleMotionModel/: OrientationMeasurementModel.hpp  SystemModel.hpp  use_wheel_optimal.h
apa_location/doc/: PK_Location.puml  README.md
apa_location/kalman/: ExtendedKalmanFilter.hpp  KalmanFilterBase.hpp  LinearizedMeasurementModel.hpp  LinearizedSystemModel.hpp  Matrix.hpp  MeasurementModel.hpp  SquareRootBase.hpp  SquareRootExtendedKalmanFilter.hpp  SquareRootFilterBase.hpp  SquareRootUnscentedKalmanFilter.hpp  StandardBase.hpp  StandardFilterBase.hpp  SystemModel.hpp  Types.hpp  UnscentedKalmanFilter.hpp  UnscentedKalmanFilterBase.hpp
apa_odometry/: CMakeLists.txt  PK_Odometry.c
apa_odometry/data_io/: dataInput_adi.c  dataInput_adi.h  dataInput_format.h  dataOutput_adi.c  dataOutput_adi.h  dataOutput_format.h  funlist.c  funlist.h
apa_odometry/pa_components/base_type/: base_typedef.h  global_include.h  ovm_typdef.h  psx_typdef.h
apa_odometry/pa_components/debugprintf/: debug_log.h
apa_odometry/pa_components/mathlib/: _appl_mathlib.c  _appl_mathlib.h  _appl_mathlib_cfg.h  mathlib.c  mathlib.h  mathlib_api.h  mathlib_geometry.c  mathlib_geometry_api.h  mathlib_typdef.h
apa_odometry/pa_components/parameter/: appl_par.c  appl_par.h  gen_par_header.h  gen_par_main.c  gen_par_switches.h  par.c  par.h  par_api.h  par_bas.h
apa_odometry/resource/: odo.txt  odo_polt.py
apa_odometry/veh/sig_if/: appl_canSignal.c  appl_canSignal.h  odo_external_adi.c  odo_external_adi.h  sigif.c  sigif_api.h  signal_input.c  signal_input.h  signal_output.c  signal_output.h
apa_odometry/veh/vho/: _appl_vho.c  _appl_vho.h  vho.c  vho.h  vho_adi.c  vho_api.h  vho_bas.h  vho_deg.h  vho_dir_recog.c  vho_dir_recog.h  vho_kin.c  vho_kin.h  vho_loghdl.c  vho_loghdl.h  vho_mini.c  vho_mini.h  vho_odo_core.c  vho_odo_core.h  vho_param.h  vho_rte.c  vho_sig_proc.c  vho_sig_proc.h  vho_uss_proc.c  vho_uss_proc.h
apa_odometry/veh/vhs/: appl_vhs.c  appl_vhs.h  vhs.c  vhs.h  vhs_adi.c  vhs_api.h  vhs_bas.h  vhs_vehspeed.c
apa_pathplan/pathexec/: CMakeLists.txt  PK_PathExecute.c  PK_PathExecuteP.h  PathExec_Avp.c  PathExec_Config.h  PathExec_Debug.c  PathExec_Debug.h  PathExec_Func.c  PathExec_Func.h  PathExec_Obj.c  PathExec_Obj.h  PathExec_Parkout.c  PathExec_Replan.h  PathExec_ReplanBase.c  PathExec_ReplanPara.c  PathExec_ReplanVert.c  PathExec_Spec.c  PathExec_UnitTest.c
apa_pathplan/pathplan/: CMakeLists.txt  PK_JsonData.c  PK_JsonData.h  PK_PathPlanP.h  PathPlan_BasePlan.c  PathPlan_BasePlan.h  PathPlan_Config.h  PathPlan_Debug.c  PathPlan_Debug.h  PathPlan_Func.c  PathPlan_Func.h  PathPlan_Main.c  PathPlan_NoUsed.c  PathPlan_Obj.c  PathPlan_Obj.h  PathPlan_ParaPlan.h  PathPlan_ParaSlot.c  PathPlan_ParkOut.c  PathPlan_PathMerge.c  PathPlan_Plan.c  PathPlan_ReplanHybrid.c  PathPlan_Tools.c  PathPlan_Tools.h  PathPlan_UnitTest.c  PathPlan_Update.c  PathPlan_Update.h  PathPlan_VertPlan.c
apa_pathplan/pathplan/hybrid_a_star/: CMakeLists.txt  GridMapGenerator.cpp  GridMapGenerator.h  PathPlan_Rs.cpp  Pathplan_Hybrid.h  hybrid_a_star.cpp  hybrid_a_star.h  hybrid_a_star_flow.cpp  hybrid_a_star_flow.h  hybrid_data.h  hybrid_main.cpp  hybrid_type.h  rs_path.cpp  rs_path.h  state_node.h  timer.h  trajectory_optimizer.h
apa_pathplan/test/: drawtrajs.py  logparse.py
apa_rte/: CMakeLists.txt  Module_API.c  Ram.c  Rte_BSW.c  Rte_ComIF.c  Rte_Func.c  Rte_Memory.cpp  Service_API.c
apa_runtime/: common.cmake  common.sh  install.sh
apa_runtime/include/: Compiler.h  Global_Config.h  Platform_Types.h  Std_Types.h
apa_sensorfusion/sensorfusion/: AVM_Buff.c  AVM_Buff.h  CMakeLists.txt  PK_B.c  PK_BP.h  PK_SF.c  PK_SF_A_FreeSpace.c  PK_SF_A_FreeSpace.h  (+3 more)
apa_services/: CMakeLists.txt
apa_slotdetect/: AVM_SlotDetect.c  AVM_SlotDetect.h  AVM_SlotDetect_UnitTest.c  CMakeLists.txt  Dist_Weight.c  Ethenet_AvmPoints.c  Ethenet_AvmSlot.c  Ethenet_AvmSlot.h  Ethenet_Object.c  Ethenet_Object.h  Ethenet_SlotV3.c  Ethenet_Vision.c  Ethenet_Vision.h  Ethenet_Vision_UnitTest.c  PK_SD_Common.c  PK_SD_Common.h  PK_SlotDetect.c  URadar_SlotDetect.c  URadar_SlotDetect.h
include/: Build_Config.h  Global_Types.h
log_manager/: LogManager.c
script/: build.sh  install.sh  pull.sh  push.sh
time_sync/: TimeSync.c
(+916 files in other folders)
